# DemoLive555-android

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/ruanxuan/demolive555/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  testRTSPClient.cpp
app/src/main/cpp/live555/groupsock/: GroupsockHelper.cpp
app/src/main/cpp/live555/liveMedia/: GenericMediaServer.cpp  RTSPClient.cpp  RTSPServer.cpp
app/src/main/java/com/example/ruanxuan/demolive555/: MainActivity.java  RtpClient.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ruanxuan/demolive555/: ExampleUnitTest.java
